made many changes to the styling, got the basic layout down, just need to tweak everything to get spacing etc correct

--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,10 @@ body {
 }
 
 .App{
-  width: 55rem;
+  /* width: 55rem; */
   background-color: #2B283A;
   margin: auto;
+  font-size: 1.3rem;
 }
 
 
@@ -31,19 +32,84 @@ body {
   justify-content: center;
   background-color: #8A2D2D;
   color: #FFFFFF;
+  max-height: 6rem;
 }
 
 .nav-bar * {
   margin: .5rem;
 }
 
+.globeLogo{
+  width: 2.4rem;
+}
+
+h1{
+  font-weight: 500;
+  font-size: 1.4rem;
+}
+
 /*Card section layout*/
 
 .card-section{
   display: flex;
+  margin: 4rem;
+  width: 85%;
+}
+/*photo-side of the card-section*/
+.img-section{
+  display: flex;
+  align-items: flex-end;
+  margin-right: 1.9rem;
+}
+.location-photo{
+  width: 18rem;
+  height: 23rem;
+  border-radius: .5rem;
 }
 
-img{
-  width: 12.5rem;
-  height: 16.8rem;
+/*Text side of the card*/
+
+.fa-location-dot{
+  color: #F55A5A;
+  background-color: #161519;
+}
+
+.map-link-text{
+  line-height: 1.2rem;
+  color: #A7A5AE;
+}
+
+.country{
+  display: inline-block;
+  margin-left: 3rem;
+  margin-right: 1rem;
+}
+
+.map-link{
+  text-decoration-line: underline;
+}
+
+
+.article-title-text{
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 3rem;
+  color: #F1A432;
+
+}
+
+.date-text{
+  font-size: 1.3rem;
+  color: #F5F5F5;
+}
+
+.article-text{
+  font-size: 1.3rem;
+  line-height: 150%;
+  color: #F5F5F5;
+}
+
+hr{
+  border: 1px solid #F5F5F5;
+  margin: 1.5rem 4rem;
 }
